--- a/_pages/404.md
+++ b/_pages/404.md
@@ -7,6 +7,9 @@ permalink: /404.html
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
+<script async src="https://cse.google.com/cse.js?cx=f517f335d138257dd"></script>
+<div class="gcse-search"></div>
+
 <script>
   var GOOG_FIXURL_LANG = 'en';
   var GOOG_FIXURL_SITE = '{{ site.url }}'
