--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,14 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents) for specific pages, or you can try searching for your desired content on this site below.
 
 <script async src="https://cse.google.com/cse.js?cx=f517f335d138257dd"></script>
 <div class="gcse-search"></div>
-
-<script>
-  var GOOG_FIXURL_LANG = 'en';
-  var GOOG_FIXURL_SITE = '{{ site.url }}'
-</script>
-<script src="https://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
-</script>
