--- a/_pages/404.md
+++ b/_pages/404.md
@@ -7,5 +7,9 @@ permalink: /404.html
 
 Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents) for specific pages, or you can try searching for your desired content on this site below.
 
+<!-- HTML elements for search -->
+<input type="text" id="search-input" placeholder="Search blog posts..">
+<ul id="results-container"></ul>
+
 <script async src="https://cse.google.com/cse.js?cx=f517f335d138257dd"></script>
 <div class="gcse-search"></div>
