--- a/_pages/404.md
+++ b/_pages/404.md
@@ -7,6 +7,24 @@ permalink: /404.html
 
 Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents) for specific pages, or you can try searching for your desired content on this site below.
 
+<!-- Html Elements for Search -->
+<div id="search-container">
+<input type="text" id="search-input" placeholder="search...">
+<ul id="results-container"></ul>
+</div>
+
+<!-- Script pointing to search-script.js -->
+<script src="/path/to/search-script.js" type="text/javascript"></script>
+
+<!-- Configuration -->
+<script>
+SimpleJekyllSearch({
+  searchInput: document.getElementById('search-input'),
+  resultsContainer: document.getElementById('results-container'),
+  json: '/search.json'
+})
+</script>
+
 <!-- HTML elements for search -->
 <input type="text" id="search-input" placeholder="Search blog posts..">
 <ul id="results-container"></ul>
