--- a/_pages/404.md
+++ b/_pages/404.md
@@ -9,7 +9,7 @@ Sorry, but the page you were trying to view does not exist --- please consult ou
 
 <!-- Html Elements for Search -->
 <div id="search-container">
-<input type="text" id="search-input" placeholder="search...">
+<input type="text" id="search-input" placeholder="search this site...">
 <ul id="results-container"></ul>
 </div>
 
@@ -26,7 +26,7 @@ SimpleJekyllSearch({
 </script>
 
 <!-- HTML elements for search -->
-<input type="text" id="search-input" placeholder="Search blog posts..">
+<input type="text" id="search-input" placeholder="Search this site...">
 <ul id="results-container"></ul>
 
 <script async src="https://cse.google.com/cse.js?cx=f517f335d138257dd"></script>
