--- a/_pages/404.md
+++ b/_pages/404.md
@@ -25,9 +25,12 @@ SimpleJekyllSearch({
 })
 </script>
 
-<!-- HTML elements for search -->
+<!-- HTML elements for search
 <input type="text" id="search-input" placeholder="Search this site...">
 <ul id="results-container"></ul>
+-->
 
+<!--
 <script async src="https://cse.google.com/cse.js?cx=f517f335d138257dd"></script>
 <div class="gcse-search"></div>
+-->
