--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,32 +5,4 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents) for specific pages, or you can try searching for your desired content on this site below.
-
-<!-- Html Elements for Search -->
-<div id="search-container">
-<input type="text" id="search-input" placeholder="search this site...">
-<ul id="results-container"></ul>
-</div>
-
-<!-- Script pointing to search-script.js -->
-<script src="/path/to/search-script.js" type="text/javascript"></script>
-
-<!-- Configuration -->
-<script>
-SimpleJekyllSearch({
-  searchInput: document.getElementById('search-input'),
-  resultsContainer: document.getElementById('results-container'),
-  json: '/search.json'
-})
-</script>
-
-<!-- HTML elements for search
-<input type="text" id="search-input" placeholder="Search this site...">
-<ul id="results-container"></ul>
--->
-
-<!--
-<script async src="https://cse.google.com/cse.js?cx=f517f335d138257dd"></script>
-<div class="gcse-search"></div>
--->
+Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents).
