--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,6 +3,7 @@ title: "Page Not Found"
 excerpt: "Page not found."
 sitemap: false
 permalink: /404.html
+comments: false
 ---
 
 Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents).
