remove share from main pages

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,6 +4,7 @@ excerpt: "Page not found."
 sitemap: false
 permalink: /404.html
 comments: false
+share: false
 ---
 
 Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents).
