--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,6 +5,7 @@ sitemap: false
 permalink: /404.html
 comments: false
 share: false
+author_profile: false
 ---
 
 Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents).
