--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,6 +2,7 @@
 title: "Page Not Found"
 excerpt: "Page not found."
 sitemap: false
+image: "assets/images/f38_k61_high-res.png"
 permalink: /404.html
 comments: false
 share: false
