random walk theorem

--- a/assets/tex/random_walk_theorem.tex
+++ b/assets/tex/random_walk_theorem.tex
@@ -13,7 +13,7 @@
 
 The Random Walk Theorem states that the average distance that a randomly walking particle will find itself from its starting point after taking $n$ steps of unit length is $\sqrt{n}$. Below, we provide a justification for why this is true for interested learners who are familiar with probability.
 
-Let $\mathbf{b}_i$ denote the random variable corresponding to the vector of the particle's $i$-th step.  The distance $d$ traveled by the particle can be represented by the sum of all the $\mathbf{b}_i$,
+Let $\mathbf{b}_i$ denote the random variable corresponding to the vector of the particle's $i$-th step.  The distance $d$ traveled by the particle can be represented by the sum of all the $\mathbf{x_i}$,
 
 \begin{center}
 $d = \mathbf{x_1} + \mathbf{x_2} + \cdots + \mathbf{x_n} \,.$
