--- a/_pages/404.md
+++ b/_pages/404.md
@@ -8,4 +8,4 @@ comments: false
 share: false
 ---
 
-Sorry, but the page you were trying to view does not exist --- please consult our [course contents](contents).
+Sorry, but the page you were trying to view does not exist --- please return to our [course homepage](http://biologicalmodeling.org).
