--- a/downloads/downloadable/chemotaxis_std_random.ipynb
+++ b/downloads/downloadable/chemotaxis_std_random.ipynb
@@ -160,7 +160,7 @@
     "    #Length of the tumbling sampled from exponential distribution with mean=0.1, float\n",
     "    tumble_time = np.random.exponential(tumble_time_mu)\n",
     "    \n",
-    "    return projection_h, projection_v, tumble_time"
+    "    return new_dir, projection_h, projection_v, tumble_time"
    ]
   },
   {
