video snapshots and bib

--- a/assets/tex/references.bib
+++ b/assets/tex/references.bib
@@ -416,3 +416,225 @@ Publisher: Nature Publishing Group},
 	year = {2011},
 	pages = {16235--16240},
 }
+
+ @article{green_2020,
+	title={Li Wenliang},
+	volume={395},
+	DOI={10.1016/s0140-6736(20)30382-2},
+	number={10225},
+	journal={The Lancet},
+	author={Green, Andrew},
+	year={2020},
+	month={Feb},
+	pages={682}
+} 
+
+@article{Hung2003-ck,
+	title = "The {SARS} epidemic in Hong Kong: what lessons have we learned?",
+	author = "Hung, Lee Shiu",
+	journal = "J. R. Soc. Med.",
+	publisher = "SAGE Publications",
+	volume = 96,
+	number = 8,
+	pages = "374--378",
+	month = aug,
+	year = 2003,
+	language = "en"
+}
+
+@misc{centers for disease control and prevention_2013,
+	title={CDC sars response timeline},
+	url={https://www.cdc.gov/about/history/sars/timeline.htm},
+	journal={Centers for Disease Control and Prevention},
+	publisher={Centers for Disease Control and Prevention},
+	year={2013},
+	month={Apr}
+}
+
+@misc{world health organization,
+	title={Who | update 95 - SARS: Chronology of a serial killer},
+	url={https://www.who.int/csr/don/2003_07_04/en/},
+	journal={World Health Organization},
+	publisher={World Health Organization}
+}
+
+@article{li_shi_yu_ren_smith_epstein_wang_crameri_hu_zhang_et al._2005,
+	title={Bats are natural reservoirs of SARS-like coronaviruses},
+	volume={310},
+	DOI={10.1126/science.1118391},
+	number={5748},
+	journal={Science},
+	author={Li, Wendong and Shi, Zhengli and Yu, Meng and Ren, Wuze and Smith, Craig and Epstein, Jonathan H. and Wang, Hanzhong and Crameri, Gary and Hu, Zhihong and Zhang, Huajun and et al.},
+	year={2005},
+	pages={676–679}
+}
+
+@article{hu_zeng_yang_ge_zhang_li_xie_shen_zhang_wang_et al._2017,
+	title={Discovery of a rich gene pool of bat SARS-related coronaviruses provides new insights into the origin of SARS coronavirus},
+	volume={13}, DOI={10.1371/journal.ppat.1006698},
+	number={11}, journal={PLOS Pathogens},
+	author={Hu, Ben and Zeng, Lei-Ping and Yang, Xing-Lou and Ge, Xing-Yi and Zhang, Wei and Li, Bei and Xie, Jia-Zheng and Shen, Xu-Rui and Zhang, Yun-Zhi and Wang, Ning and et al.},
+	year={2017}
+}
+
+@article{Shang2020-ec,
+	title = "Structural basis of receptor recognition by {SARS-CoV-2}",
+	author = "Shang, Jian and Ye, Gang and Shi, Ke and Wan, Yushun and Luo, Chuming and Aihara, Hideki and Geng, Qibin and Auerbach, Ashley and Li, Fang",
+	abstract = "A novel severe acute respiratory syndrome (SARS)-like coronavirus (SARS-CoV-2) recently emerged and is rapidly spreading in humans, causing COVID-191,2. A key to tackling this pandemic is to understand the receptor recognition mechanism of the virus, which regulates its infectivity, pathogenesis and host range. SARS-CoV-2 and SARS-CoV recognize the same receptor-angiotensin-converting enzyme 2 (ACE2)-in humans3,4. Here we determined the crystal structure of the receptor-binding domain (RBD) of the spike protein of SARS-CoV-2 (engineered to facilitate crystallization) in complex with ACE2. In comparison with the SARS-CoV RBD, an ACE2-binding ridge in SARS-CoV-2 RBD has a more compact conformation; moreover, several residue changes in the SARS-CoV-2 RBD stabilize two virus-binding hotspots at the RBD-ACE2 interface. These structural features of SARS-CoV-2 RBD increase its ACE2-binding affinity. Additionally, we show that RaTG13, a bat coronavirus that is closely related to SARS-CoV-2, also uses human ACE2 as its receptor. The differences among SARS-CoV-2, SARS-CoV and RaTG13 in ACE2 recognition shed light on the potential animal-to-human transmission of SARS-CoV-2. This study provides guidance for intervention strategies that target receptor recognition by SARS-CoV-2.",
+	journal = "Nature",
+	publisher = "Springer Science and Business Media LLC",
+	volume = 581,
+	number = 7807,
+	pages = "221--224",
+	month = may,
+	year = 2020,
+	language = "en"
+}
+
+@article{li_li_farzan_harrison_2005,
+	title={Structure of SARS coronavirus spike receptor-binding domain complexed with receptor},
+	volume={309},
+	DOI={10.1126/science.1116480},
+	number={5742},
+	journal={Science},
+	author={Li, Fang and Li, Wenhui and Farzan, Michael and Harrison, Stephen C.},
+	year={2005},
+	pages={1864–1868}
+}
+
+@misc{world health organization,
+	title={Coronavirus disease (covid-19)},
+	url={https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-coronaviruses},
+	journal={World Health Organization},
+	publisher={World Health Organization}
+} 
+
+@article{paules_marston_fauci_2020,
+	title={Coronavirus infections—more than just the common cold},
+	volume={323},
+	DOI={10.1001/jama.2020.0757},
+	number={8},
+	journal={JAMA},
+	author={Paules, Catharine I. and Marston, Hilary D. and Fauci, Anthony S.},
+	year={2020},
+	pages={707}
+}
+
+@article{tan_liu_zhuang_chen_dong_zhang_xin_2020,
+	title={Transmission and clinical characteristics of asymptomatic patients with SARS-COV-2 infection},
+	volume={15},
+	DOI={10.2217/fvl-2020-0087},
+	number={6},
+	journal={Future Virology},
+	author={Tan, Jie and Liu, Shousheng and Zhuang, Likun and Chen, Lizhen and Dong, Mengzhen and Zhang, Jie and Xin, Yongning},
+	year={2020},
+	month={Jun},
+	pages={373–380}
+}
+
+@misc{centers for disease control and prevention_2005,
+	title={SARS},
+	url={https://www.cdc.gov/sars/about/faq.html},
+	journal={Centers for Disease Control and Prevention},
+	publisher={Centers for Disease Control and Prevention},
+	year={2005},
+	month={May}
+}
+
+ @article{wade_2002, title={Unculturable bacteria--the uncharacterized organisms that cause oral infections}, volume={95}, DOI={10.1258/jrsm.95.2.81}, number={2}, journal={JRSM}, author={Wade, W.}, year={2002}, pages={81–83}} 
+
+ @article{ponomarenko_poverennaya_ilgisonis_pyatnitskiy_kopylov_zgoda_lisitsa_archakov_2016, title={The size of the human proteome: The width and depth}, volume={2016}, DOI={10.1155/2016/7436849}, journal={International Journal of Analytical Chemistry}, author={Ponomarenko, Elena A. and Poverennaya, Ekaterina V. and Ilgisonis, Ekaterina V. and Pyatnitskiy, Mikhail A. and Kopylov, Arthur T. and Zgoda, Victor G. and Lisitsa, Andrey V. and Archakov, Alexander I.}, year={2016}, month={May}, pages={1–6}} 
+
+@misc{levinthal_1969,
+	title = {How to Fold Graciously},
+	publisher = {University of Illinois Press},
+	year={1969),
+	journal = M\"{o}ssbaun Spectroscopy in Biological Systems Proceedings}
+	pages = {22-24}
+}
+
+ @article{jaimes_andré_chappie_millet_whittaker_2020, title={Phylogenetic analysis and structural modeling of SARS-COV-2 spike protein reveals an evolutionary distinct and proteolytically sensitive activation loop}, volume={432}, DOI={10.1016/j.jmb.2020.04.009}, number={10}, journal={Journal of Molecular Biology}, author={Jaimes, Javier A. and André, Nicole M. and Chappie, Joshua S. and Millet, Jean K. and Whittaker, Gary R.}, year={2020}, month={May}, pages={3309–3325}} 
+ 
+  @article{jumper_evans_pritzel_green_figurnov_ronneberger_tunyasuvunakool_bates_žídek_potapenko_et al._2021, title={Highly accurate protein structure prediction with alphafold}, volume={596}, DOI={10.1038/s41586-021-03819-2}, number={7873}, journal={Nature}, author={Jumper, John and Evans, Richard and Pritzel, Alexander and Green, Tim and Figurnov, Michael and Ronneberger, Olaf and Tunyasuvunakool, Kathryn and Bates, Russ and Žídek, Augustin and Potapenko, Anna and et al.}, year={2021}, pages={583–589}} 
+
+ @misc{alquraishi_2020, title={AlphaFold2 @ CASP14: "It feels like one's child has left home."}, url={https://moalquraishi.wordpress.com/2020/12/08/alphafold2-casp14-it-feels-like-ones-child-has-left-home/amp/}, journal={Some Thoughts on a Mysterious Universe}, author={AlQuraishi, Mohammed}, year={2020}} 
+
+ @article{service_2020, title={‘the game has changed.’ AI triumphs at solving protein structures}, DOI={10.1126/science.abf9367}, journal={Science}, author={Service, Robert}, year={2020}} 
+ 
+  @misc{deepmind_2020, title={Computational predictions of protein structures associated with covid-19}, url={https://deepmind.com/research/open-source/computational-predictions-of-protein-structures-associated-with-COVID-19}, journal={Deepmind}, year={2020}, month={Aug}} 
+
+@misc{li_Sethi_Luthey-Schulten,
+	title = {Evolution of Translation Class I Aminoacyl-tRNA Synthetase:tRNA complexes},
+	author = {Li, Li and Sethi, Anurag, and Luthey-Schulten, Zan},
+}
+
+@article{li_2008,
+	title={Structural analysis of major species barriers between humans and palm civets for severe acute respiratory syndrome coronavirus infections},
+	volume={82},
+	DOI={10.1128/jvi.00442-08},
+	number={14},
+	journal={Journal of Virology},
+	author={Li, Fang},
+	year={2008},
+	pages={6984–6991}
+}
+
+@article{wu_peng_wilken_geraghty_li_2012,
+	title={Mechanisms of host receptor adaptation by severe acute respiratory syndrome coronavirus},
+	volume={287},
+	DOI={10.1074/jbc.m111.325803},
+	number={12},
+	journal={Journal of Biological Chemistry},
+	author={Wu, Kailang and Peng, Guiqing and Wilken, Matthew and Geraghty, Robert J. and Li, Fang},
+	year={2012},
+	month={Jan},
+	pages={8904–8911}
+}
+
+@article{yang_song_jernigan_2008,
+	title={Comparisons of experimental and computed protein anisotropic temperature factors},
+	volume={76},
+	DOI={10.1002/prot.22328},
+	number={1},
+	journal={Proteins: Structure, Function, and Bioinformatics},
+	author={Yang, Lei and Song, Guang and Jernigan, Robert L.},
+	year={2008},
+	pages={164–175}
+}
+
+@article{soh_liu_nakayama_ono_torii_nakagami_matsuura_shioda_arase_2020,
+	title={The N-terminal domain of spike glycoprotein mediates SARS-COV-2 infection by associating with L-sign and DC-sign},
+	DOI={10.1101/2020.11.05.369264},
+	journal={bioRxiv},
+	author={Soh, Wai Tuck and Liu, Yafei and Nakayama, Emi E. and Ono, Chikako and Torii, Shiho and Nakagami, Hironori and Matsuura, Yoshiharu and Shioda, Tatsuo and Arase, Hisashi},
+	year={2020}
+}
+
+@article{yang_song_jernigan_2009,
+	title={Protein elastic network models and the ranges of cooperativity},
+	volume={106},
+	DOI={10.1073/pnas.0902159106},
+	number={30},
+	journal={Proceedings of the National Academy of Sciences},
+	author={Yang, L. and Song, G. and Jernigan, R. L.},
+	year={2009},
+	pages={12347–12352}
+}
+
+@article{davis_tobi_2014,
+	title={Multiple gaussian network modes alignment reveals dynamically variable regions: The hemoglobin case},
+	volume={82},
+	DOI={10.1002/prot.24565},
+	number={9},
+	journal={Proteins: Structure, Function, and Bioinformatics},
+	author={Davis, Meir and Tobi, Dror}, year={2014},
+	pages={2097–2105}
+}
+
+@article{grant_montgomery_ito_woods_2020,
+	title={Analysis of the SARS-COV-2 spike protein glycan shield: Implications for immune recognition},
+	DOI={10.1101/2020.04.07.030445},
+	journal={bioRxiv},
+	author={Grant, Oliver C. and Montgomery, David and Ito, Keigo and Woods, Robert J.},
+	year={2020}
+}
