--- a/assets/tex/references.bib
+++ b/assets/tex/references.bib
@@ -52,6 +52,24 @@
 	pages = {559--574},
 }
 
+@article{mitchell_bacterial_2006,
+	title = {Bacterial motility: links to the environment and a driving force for microbial physics},
+	volume = {55},
+	issn = {0168-6496},
+	shorttitle = {Bacterial motility},
+	url = {https://doi.org/10.1111/j.1574-6941.2005.00003.x},
+	doi = {10.1111/j.1574-6941.2005.00003.x},
+	abstract = {Bacterial motility was recognized 300 years ago. Throughout this history, research into motility has led to advances in microbiology and physics. Thirty years ago, this union helped to make run and tumble chemotaxis the paradigm for bacterial movement. This review highlights how this paradigm has expanded and changed, and emphasizes the following points. The absolute magnitude of swimming speed is ecologically important because it helps determine vulnerability to Brownian motion, sensitivity to gradients, the type of receptors used and the cost of moving, with some bacteria moving at 1 mm s−1. High costs for high speeds are offset by the benefit of resource translocation across submillimetre redox and other environmental gradients. Much of environmental chemotaxis appears adapted to respond to gradients of micrometres, rather than migrations of centimetres. In such gradients, control of ion pumps is particularly important. Motility, at least in the ocean, is highly intermittent and the speed is variable within a run. Subtleties in flagellar physics provide a variety of reorientation mechanisms. Finally, while careful physical analysis has contributed to our current understanding of bacterial movement, tactic bacteria are increasingly widely used as experimental and theoretical model systems in physics.},
+	number = {1},
+	urldate = {2022-06-24},
+	journal = {FEMS Microbiology Ecology},
+	author = {Mitchell, James G. and Kogure, Kazuhiro},
+	month = jan,
+	year = {2006},
+	pages = {3--16},
+	file = {Full Text PDF:/Users/shuangerli/Zotero/storage/BWPNZ6I4/Mitchell and Kogure - 2006 - Bacterial motility links to the environment and a.pdf:application/pdf;Snapshot:/Users/shuangerli/Zotero/storage/FN3ZRX6P/554107.html:text/html},
+}
+
 @article{Sim_2017,
 	title = {Growth rate control of flagellar assembly in \textit{{Escherichia} coli} strain {RP437}},
 	volume = {7},
