--- a/assets/tex/references.bib
+++ b/assets/tex/references.bib
@@ -1,3 +1,94 @@
+@article{turing1936a,
+  added-at = {2014-03-17T15:41:01.000+0100},
+  annote = {Turing's famous demonstration of the formal limits on computation based on a proof that the {\em halting problem} is undecidable.},
+  author = {Turing, Alan M.},
+  biburl = {https://www.bibsonomy.org/bibtex/2b51d7b5c67fb98e0117bc176ee5fd5cf/fibso},
+  interhash = {8ac1f5e961ff74849ab6f0c7348b9c9c},
+  intrahash = {b51d7b5c67fb98e0117bc176ee5fd5cf},
+  journal = {Proceedings of the London Mathematical Society},
+  keywords = {halting},
+  number = 42,
+  pages = {230--265},
+  timestamp = {2014-03-17T15:41:01.000+0100},
+  title = {On Computable Numbers, with an Application to the {E}ntscheidungsproblem},
+  url = {http://www.cs.helsinki.fi/u/gionis/cc05/OnComputableNumbers.pdf},
+  volume = 2,
+  year = 1936
+}
+
+@article{TUR52,
+  added-at = {2009-03-03T17:19:04.000+0100},
+  author = {Turing, A. M.},
+  biburl = {https://www.bibsonomy.org/bibtex/28607650779098f64c92839e48fe2908c/bronckobuster},
+  interhash = {9fb1ec6e126c85a1736402d1955b933c},
+  intrahash = {8607650779098f64c92839e48fe2908c},
+  journal = {Phil.~Trans.~Roy.~Soc.},
+  keywords = {imported},
+  nota = {aw:},
+  pages = 37,
+  timestamp = {2009-03-03T17:19:43.000+0100},
+  title = {The chemical basis of morphogenesis},
+  volume = 237,
+  year = 1952
+}
+
+@book{Goodsell_2009,
+	title = {The Machinery of Life},
+	edition = {2nd},
+	isbn = {0-387-84924-6},
+	publisher = {Springer},
+	author = {Munroe, Randall},
+	year = {2014},
+}
+
+@book{kluver1928mescal,
+  title={Mescal, and mechanisms of hallucinations},
+  author={Kl{\"u}ver, Heinrich},
+  year={1928},
+  publisher={University of Chicago Press}
+}
+
+@article{ermentrout1979mathematical,
+  title={A mathematical theory of visual hallucination patterns},
+  author={Ermentrout, G Bard and Cowan, Jack D},
+  journal={Biological cybernetics},
+  volume={34},
+  number={3},
+  pages={137--150},
+  year={1979},
+  publisher={Springer}
+}
+
+@article{ouellette2018math,
+  title={A Math Theory for Why People Hallucinate},
+  author={Ouellette, J},
+  journal={Quanta Magazine, July},
+  volume={30},
+  year={2018}
+}
+
+@article{gray1983autocatalytic,
+  title={Autocatalytic reactions in the isothermal, continuous stirred tank reactor: isolas and other forms of multistability},
+  author={Gray, P and Scott, SK},
+  journal={Chemical Engineering Science},
+  volume={38},
+  number={1},
+  pages={29--43},
+  year={1983},
+  publisher={Elsevier}
+}
+
+@article{nakamasu2009interactions,
+  title={Interactions between zebrafish pigment cells responsible for the generation of Turing patterns},
+  author={Nakamasu, Akiko and Takahashi, Go and Kanbe, Akio and Kondo, Shigeru},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={21},
+  pages={8429--8434},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+
 @ARTICLE{Pincus_2007,
   title     = "Comparison of quantitative methods for cell-shape analysis",
   author    = "Pincus, Z and Theriot, J A",
@@ -30,6 +121,7 @@
 	isbn = {0-544-45686-6},
 	url = {https://what-if.xkcd.com/book/#thebook},
 	urldate = {2022-01-27},
+	publisher = {Dey Street Books},
 	author = {Munroe, Randall},
 	year = {2014},
 }
