--- a/assets/tex/references.bib
+++ b/assets/tex/references.bib
@@ -89,31 +89,139 @@
   publisher={National Acad Sciences}
 }
 
-@ARTICLE{Pincus_2007,
-  title     = "Comparison of quantitative methods for cell-shape analysis",
-  author    = "Pincus, Z and Theriot, J A",
-  abstract  = "Morphology is an important large-scale manifestation of the
-               global organizational and physiological state of cells, and is
-               commonly used as a qualitative or quantitative measure of the
-               outcome of various assays. Here we evaluate several different
-               basic representations of cell shape - binary masks, distance
-               maps and polygonal outlines - and different subsequent encodings
-               of those representations - Fourier and Zernike decompositions,
-               and the principal and independent components analyses - to
-               determine which are best at capturing biologically important
-               shape variation. We find that principal components analysis of
-               two-dimensional shapes represented as outlines provide measures
-               of morphology which are quantitative, biologically meaningful,
-               human interpretable and work well across a range of cell types
-               and parameter settings.",
-  journal   = "J. Microsc.",
-  publisher = "Wiley",
-  volume    =  227,
-  number    = "Pt 2",
-  pages     = "140--156",
-  month     =  aug,
-  year      =  2007,
-  language  = "en"
+@article{johnson2007genome,
+  title={Genome-wide mapping of in vivo protein-DNA interactions},
+  author={Johnson, David S and Mortazavi, Ali and Myers, Richard M and Wold, Barbara},
+  journal={Science},
+  volume={316},
+  number={5830},
+  pages={1497--1502},
+  year={2007},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{samal2008regulatory,
+  title={The regulatory network of E. coli metabolism as a Boolean dynamical system exhibits both homeostasis and flexibility of response},
+  author={Samal, Areejit and Jain, Sanjay},
+  journal={BMC systems biology},
+  volume={2},
+  number={1},
+  pages={1--18},
+  year={2008},
+  publisher={BioMed Central}
+}
+
+@article{arani2018stability,
+  title={Stability estimation of autoregulated genes under Michaelis-Menten-type kinetics},
+  author={Arani, Babak MS and Mahmoudi, Mahdi and Lahti, Leo and Gonz{\'a}lez, Javier and Wit, Ernst C},
+  journal={Physical Review E},
+  volume={97},
+  number={6},
+  pages={062407},
+  year={2018},
+  publisher={APS}
+}
+
+@article{gilbert1959random,
+  title={Random graphs},
+  author={Gilbert, Edgar N},
+  journal={The Annals of Mathematical Statistics},
+  volume={30},
+  number={4},
+  pages={1141--1144},
+  year={1959},
+  publisher={JSTOR}
+}
+
+@article{dobzhansky2013nothing,
+  title={Nothing in biology makes sense except in the light of evolution},
+  author={Dobzhansky, Theodosius},
+  journal={The american biology teacher},
+  volume={75},
+  number={2},
+  pages={87--91},
+  year={2013},
+  publisher={BioOne}
+}
+
+@incollection{savageau1976biochemical,
+  title={Biochemical systems analysis. A study of function and design in molecular biology},
+  author={Savageau, Michael A},
+  booktitle={Addison Wesley},
+  year={1976}
+}
+
+@book{alon2006introduction,
+  title={An introduction to systems biology: design principles of biological circuits},
+  author={Alon, Uri},
+  year={2006},
+  publisher={Chapman and Hall/CRC}
+}
+
+@article{mangan2003structure,
+  title={Structure and function of the feed-forward loop network motif},
+  author={Mangan, Shmoolik and Alon, Uri},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={100},
+  number={21},
+  pages={11980--11985},
+  year={2003},
+  publisher={National Acad Sciences}
+}
+
+@article{aschoff1965circadian,
+  title={Circadian rhythms in man: a self-sustained oscillator with an inherent frequency underlies human 24-hour periodicity},
+  author={Aschoff, J{\"u}rgen},
+  journal={Science},
+  volume={148},
+  number={3676},
+  pages={1427--1432},
+  year={1965},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{grobbelaar1986dinitrogen,
+  title={Dinitrogen-fixing endogenous rhythm in Synechococcus RF-1},
+  author={Grobbelaar, N and Huang, TC and Lin, HY and Chow, TJ},
+  journal={FEMS Microbiology Letters},
+  volume={37},
+  number={2},
+  pages={173--177},
+  year={1986},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{elowitz2000synthetic,
+  title={A synthetic oscillatory network of transcriptional regulators},
+  author={Elowitz, Michael B and Leibler, Stanislas},
+  journal={Nature},
+  volume={403},
+  number={6767},
+  pages={335--338},
+  year={2000},
+  publisher={Nature Publishing Group}
+}
+
+@article{ho2018unification,
+  title={Unification of protein abundance datasets yields a quantitative Saccharomyces cerevisiae proteome},
+  author={Ho, Brandon and Baryshnikova, Anastasia and Brown, Grant W},
+  journal={Cell systems},
+  volume={6},
+  number={2},
+  pages={192--205},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{castillo2015design,
+  title={Design principles for robust oscillatory behavior},
+  author={Castillo-Hair, Sebastian M and Villota, Elizabeth R and Coronado, Alberto M},
+  journal={Systems and synthetic biology},
+  volume={9},
+  number={3},
+  pages={125--133},
+  year={2015},
+  publisher={Springer}
 }
 
 @book{Munroe_2014,
@@ -747,4 +855,127 @@ Publisher: Nature Publishing Group},
 	journal={bioRxiv},
 	author={Grant, Oliver C. and Montgomery, David and Ito, Keigo and Woods, Robert J.},
 	year={2020}
+}
+
+@article{anderson1935irises,
+  title={The irises of the Gaspe Peninsula},
+  author={Anderson, Edgar},
+  journal={Bull. Am. Iris Soc.},
+  volume={59},
+  pages={2--5},
+  year={1935}
+}
+
+@article{anderson1936species,
+  title={The species problem in Iris},
+  author={Anderson, Edgar},
+  journal={Annals of the Missouri Botanical Garden},
+  volume={23},
+  number={3},
+  pages={457--509},
+  year={1936},
+  publisher={JSTOR}
+}
+
+@article{fisher1936use,
+  title={The use of multiple measurements in taxonomic problems},
+  author={Fisher, Ronald A},
+  journal={Annals of eugenics},
+  volume={7},
+  number={2},
+  pages={179--188},
+  year={1936},
+  publisher={Wiley Online Library}
+}
+
+@article{fix1989discriminatory,
+  title={Discriminatory analysis. Nonparametric discrimination: Consistency properties},
+  author={Fix, Evelyn and Hodges, Joseph Lawson},
+  journal={International Statistical Review/Revue Internationale de Statistique},
+  volume={57},
+  number={3},
+  pages={238--247},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@article{barjamovic2019trade,
+  title={Trade, merchants, and the lost cities of the bronze age},
+  author={Barjamovic, Gojko and Chaney, Thomas and Co{\c{s}}ar, Kerem and Horta{\c{c}}su, Ali},
+  journal={The Quarterly Journal of Economics},
+  volume={134},
+  number={3},
+  pages={1455--1503},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{rohde2008deformation,
+  title={Deformation-based nuclear morphometry: Capturing nuclear shape variation in HeLa cells},
+  author={Rohde, Gustavo K and Ribeiro, Alexandre JS and Dahl, Kris N and Murphy, Robert F},
+  journal={Cytometry Part A: The Journal of the International Society for Analytical Cytology},
+  volume={73},
+  number={4},
+  pages={341--350},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@ARTICLE{Pincus_2007,
+  title     = "Comparison of quantitative methods for cell-shape analysis",
+  author    = "Pincus, Z and Theriot, J A",
+  abstract  = "Morphology is an important large-scale manifestation of the
+               global organizational and physiological state of cells, and is
+               commonly used as a qualitative or quantitative measure of the
+               outcome of various assays. Here we evaluate several different
+               basic representations of cell shape - binary masks, distance
+               maps and polygonal outlines - and different subsequent encodings
+               of those representations - Fourier and Zernike decompositions,
+               and the principal and independent components analyses - to
+               determine which are best at capturing biologically important
+               shape variation. We find that principal components analysis of
+               two-dimensional shapes represented as outlines provide measures
+               of morphology which are quantitative, biologically meaningful,
+               human interpretable and work well across a range of cell types
+               and parameter settings.",
+  journal   = "J. Microsc.",
+  publisher = "Wiley",
+  volume    =  227,
+  number    = "Pt 2",
+  pages     = "140--156",
+  month     =  aug,
+  year      =  2007,
+  language  = "en"
+}
+
+@inproceedings{habibzadeh2018automatic,
+  title={Automatic white blood cell classification using pre-trained deep learning models: Resnet and inception},
+  author={Habibzadeh, Mehdi and Jannesari, Mahboobeh and Rezaei, Zahra and Baharvand, Hossein and Totonchi, Mehdi},
+  booktitle={Tenth international conference on machine vision (ICMV 2017)},
+  volume={10696},
+  pages={274--281},
+  year={2018},
+  organization={SPIE}
+}
+
+@article{mcculloch1943logical,
+  title={A logical calculus of the ideas immanent in nervous activity},
+  author={McCulloch, Warren S and Pitts, Walter},
+  journal={The bulletin of mathematical biophysics},
+  volume={5},
+  number={4},
+  pages={115--133},
+  year={1943},
+  publisher={Springer}
+}
+
+@article{rosenblatt1958perceptron,
+  title={The perceptron: a probabilistic model for information storage and organization in the brain.},
+  author={Rosenblatt, Frank},
+  journal={Psychological review},
+  volume={65},
+  number={6},
+  pages={386},
+  year={1958},
+  publisher={American Psychological Association}
 }
