Final adjustments to site, including removing buttons from some pages

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,6 +6,7 @@ image: "assets/images/f38_k61_high-res.png"
 permalink: /404.html
 comments: false
 share: false
+exclude_book_buttons: true # remove buy the book buttons
 ---
 
 Sorry, but the page you were trying to view does not exist --- please return to our [course homepage](http://biologicalmodeling.org).
