prologue and main page image alts

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,6 +4,7 @@ description: "Sorry, we couldnâ€™t find that page. Try the navigation menu 
 excerpt: "Page not found."
 sitemap: false
 image: "assets/images/f38_k61_high-res.png"
+image_alt: "Turing pattern stripes produced by the Gray-Scott model, a coarse-grained predator-prey reaction-diffusion system."
 permalink: /404.html
 comments: false
 share: false
