adding header image

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,11 +4,15 @@ description: "Sorry, we couldnâ€™t find that page. Try the navigation menu 
 excerpt: "Page not found."
 sitemap: false
 image: "assets/images/f38_k61_high-res.png"
-image_alt: "Turing pattern stripes produced by the Gray-Scott model, a coarse-grained predator-prey reaction-diffusion system."
 permalink: /404.html
 comments: false
 share: false
 exclude_book_buttons: true # remove buy the book buttons
+header:
+  overlay_color: "#000"
+  overlay_filter: "0.6"
+  overlay_image: /assets/images/600px/f38_k61_high-res.png
+  image_alt: "Turing pattern stripes produced by the Gray-Scott model, a coarse-grained predator-prey reaction-diffusion system."
 ---
 
 Sorry, but the page you were trying to view does not exist --- please return to our [course homepage](http://biologicalmodeling.org).
