--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,7 +3,7 @@ title: "Page Not Found"
 description: "Sorry, we couldnâ€™t find that page. Try the navigation menu or search to locate the biological modeling resource you need."
 excerpt: "Page not found."
 sitemap: false
-image: "assets/images/f38_k61_compressed.jpg"
+image: "assets/images/f38_k61_compressed.webp"
 permalink: /404.html
 comments: false
 share: false
