--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,6 +1,6 @@
 ---
 title: "Page Not Found"
-description: "Sorry, we couldnâ€™t find that page. Try the navigation menu or search to locate the biological modeling resource you need."
+description: "Sorry, we couldn't find that page. Try the navigation menu or search to locate the biological modeling resource you need."
 excerpt: "Page not found."
 sitemap: false
 image: "assets/images/f38_k61_compressed.webp"
